// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match the snapshot 1`] = `
<div>
  Trapper Keeper
</div>
`;

exports[`Header should match the snapshot with all data passed in correctly 1`] = `
<div>
  I am a stateless header
</div>
`;
